# codewars

./: .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  quarter_of_the_year.cpp  test_quarter.cpp
cpp/: Multiplesof3or5.cpp  counting_duplicates.cpp  cw_compat.hpp  detect_pangram.cpp  highest_and_lowest.cpp  take_10_minutes_walk.cpp  who_likes_it.cpp
kata/: find_the_vowels.cpp  isograms.cpp  mumbling.cpp  quarter_of_the_year.cpp  square_every_digit.cpp  valid_parentheses.cpp
tests/: cw_compat.hpp  find_the_vowels.cpp  isograms.cpp  mumbling.cpp  quarter_of_the_year.cpp  square_every_digit.cpp  valid_parentheses.cpp
